# Python-Practice

./: README.md  firstPythonScript.py  huggingFaceLLMModels.py  pyproject.toml
