[project]
name = "practicerepository"
version = "0.1.0"
description = "this is just to practice pythhon and practice poetry and other libraries"
authors = [
    {name = "sai venkat",email = "saisam346@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
